--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ace-builds": "^1.34.1",
     "flex-splitter-directive": "^0.5.1",
-    "marked": "^12.0.2"
+    "marked": "^12.0.2",
+    "monaco-editor": "^0.49.0"
   }
 }
